# cerebral-sdk-prototype

./: README.md  pyproject.toml
.github/workflows/: PYTHONPATH_SET  python-app.yml
cerebral_sdk/: __init__.py  engine.py
cerebral_sdk/agents/: __init__.py  repo_development.py
cerebral_sdk/amygdala/: __init__.py  valence.py
cerebral_sdk/corpus_callosum/: router.py
cerebral_sdk/hippocampus/: semantic_memory.py
cerebral_sdk/pfc/: neural_event.py
cerebral_sdk/tests/: test_integration.py  test_repo_development_agent.py
cerebral_sdk/thalamus/: event_scorer.py
cerebral_sdk/webhooks/: __init__.py  manus_webhook.py
cerebral_sdk/wernicke/: summarizer.py
